<resources>
    <string name="app_name">Project</string>
    <string name="your_name">Your Name</string>
    <string name="phone_no">Phone No.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Next">next</string>
    <string name="frequency">Frequency</string>
    <string name="one_time">One Time</string>
    <string name="bi_weekly">Bi-Weekly</string>
    <string name="weekly">Weekly</string>
    <string name="date_time">Date/Time</string>
    <string name="action_settings">Settings</string>
    <string name="first_step_label">First_Step</string>
    <string name="second_step_label">Second_Step</string>
    <string name="third_step_label">Third_Step</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="book">Book</string>
    <string name="indoor_cleaning">Indoor Cleaning</string>
    <string name="outdoor_cleaning">Outdoor Cleaning</string>
    <string name="about_us">About Us</string>
    <string name="_07_00_09_00">07:00-09:00</string>
    <string name="_10_00_14_00">10:00-14:00</string>
    <string name="_14_00_16_00">14:00-16:00</string>
    <string name="we_provide_a_full_range_of_cleaning_services_from_indoor_to_outdoor">We provide a full range of cleaning services from indoor to outdoor!</string>
    <string name="detailed_cleaning_of_all_surfaces_in_the_living_room_kitchen_and_bathroom_n_dusting_wiping_and_disinfection_using_top_quality_materials_n_furniture_laundry_cleaning_are_available_if_requested"><![CDATA[- Detailed cleaning of all surfaces in the living room, kitchen, and bathroom.\n - Dusting, wiping and disinfection using top-quality materials. \n - Furniture & Laundry Cleaning are available if requested.]]></string>
    <string name="done">Done</string>
    <string name="number_of_professionals">Number of Professionals</string>
    <string name="details">Details</string>
    <string name="_4">4</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="specific_instructions">Specific Instructions</string>
</resources>